# ObjectDetection

./: CMakeLists.txt  Common.h  Feature.cpp  Feature.h  ImageDatabase.cpp  ImageDatabase.h  PrecisionRecall.h  SupportVectorMachine.cpp  SupportVectorMachine.h  Utils.h  main.cpp
